fix typing animation spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -108,7 +108,6 @@ TODO: Implementing enhancements for all files :)
   margin-top: 30px;
 }
 .about-container p {
-  margin-top: 20px;
   margin-bottom: 40px;
 }
 
@@ -296,7 +295,7 @@ TODO: Implementing enhancements for all files :)
   color: black;
   text-align: center;
   font-size: 4vw;
-  margin: 1em;
+  padding: 0.5em 0 0.5em 0;
 }
 /* job title */
 #job-main section h2 {
@@ -414,7 +413,6 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
 }
 
 .apply-h2 {
-  margin-top: 30px;
   font-size: 30px;
   text-align: center;
   font-weight: normal;
@@ -679,6 +677,7 @@ https://www.sitepoint.com/css-typewriter-effect/ */
   display: flex;
   justify-content: center;
   margin-top: 5vw;
+  margin-bottom: 30px;
 }
 
 /* Animation for apply page heading */
@@ -705,7 +704,7 @@ https://www.sitepoint.com/css-typewriter-effect/ */
   overflow: hidden;
   border-right: 4px solid black;
   white-space: nowrap;
-  animation: about-typing 1.5s steps(21, end) forwards,
+  animation: about-typing 1.5s steps(15, end) forwards,
     blink 0.5s step-end infinite alternate;
   width: 0;
 }
@@ -735,7 +734,7 @@ https://www.sitepoint.com/css-typewriter-effect/ */
     width: 0;
   }
   to {
-    width: 48%;
+    width: 49%;
   }
 }
 
